examples/test/testpolicy13578.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy13578
  namespace: namespace262
spec:
  podSelector:
    matchLabels:
      key27: value35
      key8: value6
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key41: value1
          key3: value28
          key39: value22
      podSelector:
        matchLabels:
          key1: value48
          key25: value25
